third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_extra_arg.exp

Diagnostics:
error: invalid call of `move_to`: argument count mismatch (expected 2 but found 3)
  ┌─ tests/checking/typing/v1-signer/move_to_extra_arg.move:5:9
  │
5 │         move_to<R>(s, R { f: false }, a);
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid call of `move_to`: argument count mismatch (expected 2 but found 4)
   ┌─ tests/checking/typing/v1-signer/move_to_extra_arg.move:15:9
   │
15 │         move_to<R<bool>>(a, s, a, R<bool> { f: false });
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
